<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="24dp"
    android:layout_gravity="center"
    android:layoutDirection="rtl"
    android:gravity="center"
    android:background="@drawable/dialog_body_background">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:background="@drawable/dialog_header_background"
    android:padding="10dp"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/main_activity_navigation_bottom_navigation_tables"
        style="@style/bottom_layout_for_image_layout"
        android:background="@drawable/circle_navigation_tables">


        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/random_icon_3"/>

    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:text="@string/change_password_button"/>


</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:orientation="vertical" >


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:text="@string/thank_you_statement"
        android:gravity="center"
        android:layout_marginBottom="8dp"
        android:textSize="20sp"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginBottom="32dp"
        android:textColor="@color/colorPrimary"
        android:text="@string/change_password_statement"
        android:gravity="center"
        android:textSize="20sp"/>




    <TextView
        android:id="@+id/dialog_send_change_password_oK_button"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_gravity="center"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:background="@drawable/final_primary_button"
        android:text="@string/ok_button"/>



</LinearLayout>




</LinearLayout>

